update build structure