@@ -1,45 +1,20 @@
-import com.typesafe.sbt.SbtNativePackager._
-import NativePackagerKeys._
-
-packageArchetype.java_application
-
-exportJars := true
+name := "sidup-casestudy-profitreact"
 
 mainClass in (Compile) := Some("projections.ProjectionsUI")
 
-name := "ReactivePlaygroundCaseStudies"
+organization := Common.organization
 
-version := "0.0.0"
+version := Common.version
 
-scalaVersion := "2.10.3"
+scalaVersion := Common.scalaVersion
 
-scalacOptions ++= List(
-  "-deprecation",
-  "-encoding", "UTF-8",
-  "-unchecked",
-  "-feature",
-  "-target:jvm-1.6",
-  "-Xlint"
-)
+scalacOptions ++= Common.scalacOptions
 
-javaOptions ++= Seq(
-  "-server",
-  "-verbose:gc",
-  "-Xms512M",
-  "-Xmx512M",
-  //"-XX:NewRatio=1",
-  //"-XX:CompileThreshold=100",
-  "-XX:+PrintCompilation",
-  "-XX:+PrintGCDetails",
-  "-XX:+UseParallelGC"
-)
+javaOptions ++= Common.javaOptions
 
-// resolvers ++= Seq()
+libraryDependencies ++= Common.libraryDependencies
 
 libraryDependencies ++= Seq(
-  "org.scalatest" % "scalatest_2.10" % "1.9.1" % "test",
-  "org.slf4j" % "slf4j-simple" % "1.7.5",
-  "com.typesafe" %% "scalalogging-slf4j" % "1.0.1",
   "com.github.axel22" %% "scalameter" % "0.4-M2",
   "com.github.scala-incubator.io" %% "scala-io-core" % "0.4.2",
   "com.github.scala-incubator.io" %% "scala-io-file" % "0.4.2"
